@@ -9,14 +9,15 @@
 
 = form_for(@displayed_user, url: user_save_path, method: 'post') do |f|
   = f.hidden_field(:login)
-  %p
-    = f.label(:realname, "Name:")
-    %br
-    = f.text_field(:realname)
-  %p
-    = f.label(:email, "e-Mail:")
-    %br
-    = f.text_field(:email, required: true, email: true)
+  - unless @configuration.ldap_enabled?
+    %p
+      = f.label(:realname, "Name:")
+      %br
+      = f.text_field(:realname)
+    %p
+      = f.label(:email, "e-Mail:")
+      %br
+      = f.text_field(:email, required: true, email: true)
   %p
     = f.collection_check_boxes(:role_ids, Role.global, :id, :title)
   %p
