@@ -33,4 +33,74 @@ RSpec.describe Configuration do
       expect(configuration).to have_received(:write_to_backend)
     end
   end
+
+  describe '#ldap_enabled?' do
+    let(:config) { Configuration.first }
+
+    it 'returns true if config option `ldap_mode` is set to :on' do
+      stub_const('CONFIG', CONFIG.merge({ 'ldap_mode' => :on }))
+      expect(config.ldap_enabled?).to eq(true)
+    end
+
+    it 'returns false if config option `ldap_mode` is not set to :on' do
+      stub_const('CONFIG', CONFIG.merge({ 'ldap_mode' => :off }))
+      expect(config.ldap_enabled?).to eq(false)
+    end
+  end
+
+  describe '#passwords_changable?' do
+    let(:config) { Configuration.first }
+
+    it 'returns false if config option `change_password` is set to false' do
+      allow(config).to receive(:change_password).and_return(false)
+      expect(config.passwords_changable?).to eq(false)
+    end
+
+    context 'external authentication services' do
+      it 'returns false if config option `proxy_auth_mode` is set to :on' do
+        stub_const('CONFIG', CONFIG.merge({ 'proxy_auth_mode' => :on }))
+        expect(config.passwords_changable?).to eq(false)
+      end
+
+      it 'returns false if config option `ldap_mode` is set to :on' do
+        stub_const('CONFIG', CONFIG.merge({ 'ldap_mode' => :on }))
+        expect(config.passwords_changable?).to eq(false)
+      end
+    end
+
+    context 'without external authentication services' do
+      it 'returns true' do
+        expect(config.passwords_changable?).to eq(true)
+      end
+    end
+  end
+
+  describe '#accounts_editable?' do
+    let(:config) { Configuration.first }
+
+    context 'proxy_auth_mode is enabled' do
+      before do
+        stub_const('CONFIG', CONFIG.merge({ 'proxy_auth_mode' => :on }))
+      end
+
+      it 'returns false if proxy_auth_account_page is not present' do
+        expect(config.accounts_editable?).to eq(false)
+      end
+
+      it 'returns true if proxy_auth_account_page is present' do
+        stub_const('CONFIG', CONFIG.merge({ 'proxy_auth_account_page' => 'https://opensuse.org' }))
+        expect(config.accounts_editable?).to eq(true)
+      end
+    end
+
+    context 'ldap_mode is enabled' do
+      before do
+        stub_const('CONFIG', CONFIG.merge({ 'ldap_mode' => :on }))
+      end
+
+      it 'returns false' do
+        expect(config.accounts_editable?).to eq(false)
+      end
+    end
+  end
 end
