@@ -53,6 +53,8 @@ Wanted changes:
 
  * service dispatcher is used by default now
 
+ * The editing of a user's realname, email adress or password is no longer possible if LDAP mode is activated
+
 Other changes
 =============
 
